# Self-Aware-Agent

./: .gitignore  LICENSE  README.md  env.py  env.sh  enviroment.py  environment.yml  intial_tdw.py  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  planning.md  process.excalidraw  pybullet_env.py  pybullet_env2.py  pybullet_env3.py  pyproject.toml  requirements.txt  requirments.txt  run.sh  run_tdw.py  tasks.md  test.tdw.py  test2.tdw.py  test3.tdw.py  test4.tdw.py
TDW/: setup.sh
Unity/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Unity/Assets/: Floor.unity  Self Aware Agent.unity  python_manager.cs
Unity/ProjectSettings/: ProjectSettings.asset  PythonSettings.asset
curiosity/data/: environment.py  online_data.py
curiosity/interaction/: agents.py
curiosity/models/: my_model.py
logs/: metrics_log.csv  metrics_log_vae_rnn.csv
logs/multi_agent/: multi_agent_metrics.csv
logs/multi_agent_v2/: multi_agent_metrics_v2.csv
logs/multi_agent_v3/: multi_agent_metrics_v2.csv
src/: CuriosityDrivenAgent.py  DifferntialDriveAgent.py  curiosity_driven_agent.py  environment.py  main.py  metric_logger.py  models.py  multi_agent_controller.py  plot.py  pyramid.mtl  pyramid.urdf  pyramid_collision.stl  saveEnv.py  saveModels.py  saveSimulation.py  save_curiosity_driven_agent.py  simulation.py  utility.py  video_recorder.py
src/common/: _video_recorder.py  enums.py  metric_logger.py  replay_buffer.py  utility.py  video_recorder.py
tests/: test_environment.py  test_vae.py  test_vae_with_realistic_data.py
(+13 files in other folders)
