[project]
name = "self-aware-agent"
version = "0.1.0"
description = "A self-aware agent implementation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "matplotlib>=3.8.0",
    "pybullet==3.2.7",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "opencv-python>=4.9.0",
    "pytest>=8.0.0",
    "tensorboard>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 